--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node .",
     "dev": "node --watch .",
+    "seed": "node src/seed/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
